add manage products

--- a/index.html
+++ b/index.html
@@ -43,6 +43,19 @@
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                 <div class="project_block p-2 text-center">
                     <h4 class="project_title">
+                        Products Management
+                    </h4>
+                    <div class="project_desc py-3">
+                        Manage Company's products
+                    </div>
+                    <div>
+                        <a class="btn btn-outline-secondary w-100" href="https://products.ahotech.xyz/admin/" role="button">Go</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <div class="project_block p-2 text-center">
+                    <h4 class="project_title">
                         Tools
                     </h4>
                     <div class="project_desc py-3">
