--- a/index.html
+++ b/index.html
@@ -21,47 +21,61 @@
         .project_desc{
             border-top: 1px solid #eee;
         }
+        .page-title{
+            background-color: #232f3e;
+            color: #fff;
+        }
+        .project_title{
+            padding: 5px 15px;
+            border-top-left-radius: 5px;
+            border-top-right-radius: 5px;
+            font-weight: bold;
+            font-size: 1.5rem;
+        }
+        .btn-wrap{
+            padding: 0 15px;
+        }
     </style>
 </head>
 <body>
-    <h3 class="my-3 text-center">Choose project</h3>
+    <h3 class="py-3 mb-4 text-center page-title">Choose project</h3>
     <div class="projects-wrap px-3">
         <div class="row">
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                <div class="project_block p-2 text-center">
-                    <h4 class="project_title">
+                <div class="project_block text-center">
+                    <div class="project_title">
                          Keywords
-                    </h4>
+                    </div>
                     <div class="project_desc py-3">
                          Keywords management
                     </div>
-                    <div>
+                    <div class="btn-wrap">
                         <a class="btn btn-outline-secondary w-100" href="/KEYWORDS" role="button">Go</a>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                <div class="project_block p-2 text-center">
-                    <h4 class="project_title">
+                <div class="project_block text-center">
+                    <div class="project_title">
                         Products Management
-                    </h4>
+                    </div>
                     <div class="project_desc py-3">
                         Manage Company's products
                     </div>
-                    <div>
+                    <div class="btn-wrap">
                         <a class="btn btn-outline-secondary w-100" href="https://products.ahotech.xyz/admin/" role="button">Go</a>
                     </div>
                 </div>
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                <div class="project_block p-2 text-center">
-                    <h4 class="project_title">
+                <div class="project_block text-center">
+                    <div class="project_title">
                         Tools
-                    </h4>
+                    </div>
                     <div class="project_desc py-3">
                         Tools that help you do sth
                     </div>
-                    <div>
+                    <div class="btn-wrap">
                         <a class="btn btn-outline-secondary w-100" href="/tools.html" role="button">Go</a>
                     </div>
                 </div>
