--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             font-size: 1.5rem;
         }
         .btn-wrap{
-            padding: 0 15px;
+            padding: 15px;
         }
     </style>
 </head>
