add autopost api

--- a/index.html
+++ b/index.html
@@ -70,6 +70,19 @@
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                 <div class="project_block text-center">
                     <div class="project_title">
+                        Auto post API
+                    </div>
+                    <div class="project_desc py-3">
+                        Manage auto post keyword,urls etc.
+                    </div>
+                    <div class="btn-wrap">
+                        <a class="btn btn-outline-secondary w-100" href="https://autopostapi.ahotech.xyz/admin/" role="button">Go</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <div class="project_block text-center">
+                    <div class="project_title">
                         Tools
                     </div>
                     <div class="project_desc py-3">
