change product url

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         Manage Company's products
                     </div>
                     <div class="btn-wrap">
-                        <a class="btn btn-outline-secondary w-100" href="https://products.ahotech.xyz/admin/" role="button">Go</a>
+                        <a class="btn btn-outline-secondary w-100" href="http://products.50d.top/admin/" role="button">Go</a>
                     </div>
                 </div>
             </div>
