change url to 50d

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         Manage auto post keyword,urls etc.
                     </div>
                     <div class="btn-wrap">
-                        <a class="btn btn-outline-secondary w-100" href="https://autopostapi.ahotech.xyz/admin/" role="button">Go</a>
+                        <a class="btn btn-outline-secondary w-100" href="https://autopostapi.50d.top/admin" role="button">Go</a>
                     </div>
                 </div>
             </div>
