--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                          Keywords management
                     </div>
                     <div class="btn-wrap">
-                        <a class="btn btn-outline-secondary w-100" href="/KEYWORDS" role="button">Go</a>
+                        <a class="btn btn-outline-secondary w-100" target="_blank" href="/KEYWORDS" role="button">Go</a>
                     </div>
                 </div>
             </div>
@@ -63,7 +63,7 @@
                         Manage Company's products
                     </div>
                     <div class="btn-wrap">
-                        <a class="btn btn-outline-secondary w-100" href="http://products.50d.top/admin/" role="button">Go</a>
+                        <a class="btn btn-outline-secondary w-100" target="_blank" href="http://products.50d.top/admin/" role="button">Go</a>
                     </div>
                 </div>
             </div>
@@ -76,7 +76,7 @@
                         Manage auto post keyword,urls etc.
                     </div>
                     <div class="btn-wrap">
-                        <a class="btn btn-outline-secondary w-100" href="https://autopostapi.50d.top/admin" role="button">Go</a>
+                        <a class="btn btn-outline-secondary w-100" target="_blank" href="https://autopostapi.50d.top/admin" role="button">Go</a>
                     </div>
                 </div>
             </div>
@@ -89,7 +89,7 @@
                         Tools that help you do sth
                     </div>
                     <div class="btn-wrap">
-                        <a class="btn btn-outline-secondary w-100" href="/tools.html" role="button">Go</a>
+                        <a class="btn btn-outline-secondary w-100" target="_blank" href="/tools.html" role="button">Go</a>
                     </div>
                 </div>
             </div>
