--- a/index.html
+++ b/index.html
@@ -83,6 +83,32 @@
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                 <div class="project_block text-center">
                     <div class="project_title">
+                        SEO
+                    </div>
+                    <div class="project_desc py-3">
+                        Manage to ping urls domains etc.
+                    </div>
+                    <div class="btn-wrap">
+                        <a class="btn btn-outline-secondary w-100" target="_blank" href="https://seo.50d.top/admin" role="button">Go</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <div class="project_block text-center">
+                    <div class="project_title">
+                        Customer
+                    </div>
+                    <div class="project_desc py-3">
+                        Manage Customers Inquiries etc.
+                    </div>
+                    <div class="btn-wrap">
+                        <a class="btn btn-outline-secondary w-100" target="_blank" href="https://customer.50d.top/admin" role="button">Go</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <div class="project_block text-center">
+                    <div class="project_title">
                         Tools
                     </div>
                     <div class="project_desc py-3">
