--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             background-color: #fff;
             border-radius: 5px;
             box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+            margin-bottom: 15px;
         }
         .project_desc{
             border-top: 1px solid #eee;
