--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         Manage Company's products
                     </div>
                     <div class="btn-wrap">
-                        <a class="btn btn-outline-secondary w-100" target="_blank" href="http://products.50d.top/admin/" role="button">Go</a>
+                        <a class="btn btn-outline-secondary w-100" target="_blank" href="http://customer.50d.top/admin/" role="button">Go</a>
                     </div>
                 </div>
             </div>
